--- a/ccu/pubspec.yaml
+++ b/ccu/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^4.3.2+1
   flutter_bloc: ^6.0.5
   google_sign_in: ^4.5.3
+  percent_indicator: ^2.1.3
 
 dev_dependencies:
   flutter_test:
