--- a/ccu/pubspec.yaml
+++ b/ccu/pubspec.yaml
@@ -27,13 +27,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  firebase_core: ^1.11.0
+  cloud_firestore: ^3.1.6
+  firebase_auth: ^3.3.5
   cupertino_icons: ^0.1.3
   carousel_slider: ^2.2.1
   carousel_pro: ^1.0.0
   flutter_spinkit: ^4.1.2+1
-  firebase_core: ^0.5.0
-  cloud_firestore: ^0.14.0+2
-  firebase_auth: ^0.18.0+1
   provider: ^4.3.2+1
   flutter_bloc: ^6.0.5
   google_sign_in: ^4.5.3
