--- a/ccu/ios/Runner/Info.plist
+++ b/ccu/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To choose an infraction image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To take a photo of an infraction</string>
 </dict>
 </plist>
