--- a/ccu/pubspec.yaml
+++ b/ccu/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -33,11 +33,13 @@ dependencies:
   cupertino_icons: ^0.1.3
   carousel_slider: ^2.2.1
   carousel_pro: ^1.0.0
-  flutter_spinkit: ^4.1.2+1
-  provider: ^4.3.2+1
-  flutter_bloc: ^6.0.5
-  google_sign_in: ^4.5.3
-  percent_indicator: ^2.1.3
+  flutter_spinkit: ^5.1.0
+  provider: ^6.0.2
+  flutter_bloc: ^8.0.1
+  google_sign_in: ^5.2.3
+  percent_indicator: ^4.0.0
+  image_picker: ^0.8.4+4
+  camera: ^0.9.4+6
 
 dev_dependencies:
   flutter_test:
