--- a/ccu/pubspec.yaml
+++ b/ccu/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   percent_indicator: ^4.0.0
   image_picker: ^0.8.4+4
   camera: ^0.9.4+6
+  intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
