--- a/ccu/pubspec.yaml
+++ b/ccu/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^1.11.0
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.3.5
+  firebase_storage: ^10.2.5
   cupertino_icons: ^0.1.3
   carousel_slider: ^2.2.1
   carousel_pro: ^1.0.0
