Police map + Discount flow

--- a/ccu/android/app/src/main/AndroidManifest.xml
+++ b/ccu/android/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
-            android:value="2" />
+            android:value="2"/>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyASCVlOZv4Uo30hDEO7qcTRdcC7MeVYVJw"/>
     </application>
 </manifest>
