--- a/ccu/pubspec.yaml
+++ b/ccu/pubspec.yaml
@@ -32,17 +32,20 @@ dependencies:
   firebase_auth: ^3.3.5
   firebase_storage: ^10.2.5
   cupertino_icons: ^0.1.3
-  carousel_slider: ^2.2.1
-  carousel_pro: ^1.0.0
   flutter_spinkit: ^5.1.0
   provider: ^6.0.2
   flutter_bloc: ^8.0.1
   google_sign_in: ^5.2.3
   percent_indicator: ^4.0.0
-  image_picker: ^0.8.4+4
   camera: ^0.9.4+6
   intl: ^0.17.0
-
+  web3dart: ^2.3.3
+  http: ^0.13.4
+  web_socket_channel: ^2.1.0
+  google_places_flutter: ^2.0.5
+  google_maps_flutter: ^2.0.5
+  fluster: ^1.2.0
+  flutter_cache_manager: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
+     - src/artifacts/Tdl.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
